force-app/main/default/objects/Allocations_Product__c/fields/Item_Master_Product_lookup__c.field-meta.xml
<CustomField>
    <fullName>Item_Master_Product_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Master Product child</label>
    <referenceTo>Item_Master_Product__c</referenceTo>
    <relationshipLabel>Allocations Products</relationshipLabel>
    <relationshipName>Allocations_Products</relationshipName>
    <type>Lookup</type>
</CustomField>