force-app/main/default/objects/Allocations_Product__c/fields/Product_1__c.field-meta.xml
<CustomField>
    <fullName>Product_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product (child)</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Allocations Products (Product)</relationshipLabel>
    <relationshipName>Allocations_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>