force-app/main/default/objects/Allocations_Product__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Line</label>
    <referenceTo>Product_Line__c</referenceTo>
    <relationshipLabel>Allocations Products</relationshipLabel>
    <relationshipName>Allocations_Products</relationshipName>
    <type>Lookup</type>
</CustomField>